[gd_scene load_steps=9 format=3 uid="uid://cqqtctmev3ocb"]

[ext_resource type="Script" uid="uid://dc88caaaxcghd" path="res://lib/GoalStage1/toilet_goal_lpc.gd" id="1_e6fg2"]
[ext_resource type="PackedScene" uid="uid://1rxwjo66rwm2" path="res://imports/models/Low Poly Construction/Pallet.fbx" id="4_18276"]
[ext_resource type="PackedScene" uid="uid://yif73m8lrxl2" path="res://imports/models/Low Poly Construction/Toilet A.fbx" id="4_kyw5l"]
[ext_resource type="PackedScene" uid="uid://br7370jtn7yup" path="res://imports/models/Low Poly Construction/Toilet B.fbx" id="5_bj8tn"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_18276"]
points = PackedVector3Array(0.005110152, 0.0025732457, -0.0010820981, 0.004917224, 0.0031158715, -0.001386351, 0.0041813403, 0.0044545024, 0.011314488, 0.004637478, 0.0031899181, 0.010598463, 0.004637478, 0.0020236778, 0.010902717, 0.004637478, 0.0006468659, 0.011229846, 0.005110152, 0.0022076382, -0.0010820981, 0.005110152, 0.0025732457, -0.0024386542, 0.004481757, 0.003579822, -0.009001821, 0.0033131633, 0.0045192936, 0.0119801825, 0.003333834, 0.0030672778, 0.012469732, 0.004208902, 0.0028948872, 0.011820051, 0.003878167, 0.0042069084, -0.009791048, 0.003258041, 0.005178775, 0.011106315, 0.0042116577, 0.0010818923, 0.012314175, 0.0042102793, -0.00073110266, 0.01231875, 0.004637478, -0.0021102284, 0.011229846, 0.004637478, -0.0034870403, 0.010902717, 0.004637478, -0.0046532806, 0.010598463, 0.005110152, 0.0022076382, -0.0024386542, 0.004637478, 0.0031899181, -0.008699856, 0.004481757, -0.0050431844, -0.009001821, -0.008070979, 0.0045192936, 0.0119801825, -0.00809165, 0.0030672778, 0.012469732, 0.0033324566, 0.0011628815, 0.012989021, 0.003878167, -0.0056702704, -0.009791048, 0.0031601992, 0.0042069084, -0.010376678, 0.0031601992, 0.004754162, -0.009791048, -0.008015857, 0.005178775, 0.011106315, 0.0033352124, -0.00073110266, 0.012993597, 0.0042116577, -0.0025452548, 0.012314175, 0.004208902, -0.0043582497, 0.011820051, 0.0041813403, -0.005917865, 0.011314488, 0.004637478, -0.0046532806, -0.008699856, -0.008939156, 0.0044545024, 0.011314488, -0.008090272, 0.0011628815, 0.012989021, -0.008966717, 0.0028948872, 0.011820051, -0.008968095, 0.0010818923, 0.012314175, 0.0031601992, -0.006217524, -0.009791048, 0.0031601992, -0.0056702704, -0.010376678, 0.003258041, -0.0066409805, 0.011106315, -0.007916637, 0.0042069084, -0.010376678, -0.007916637, 0.004754162, -0.009791048, -0.008634605, 0.0042069084, -0.009791048, -0.008093028, -0.00073110266, 0.012993597, 0.0033324566, -0.0026262435, 0.012989021, 0.003333834, -0.0045306403, 0.012469732, 0.0033131633, -0.005982656, 0.0119801825, -0.008966717, -0.0043582497, 0.011820051, -0.008968095, -0.0025452548, 0.012314175, -0.008968095, -0.00073110266, 0.01231875, -0.007916637, -0.006217524, -0.009791048, -0.007916637, -0.0056702704, -0.010376678, -0.008015857, -0.0066409805, 0.011106315, -0.008634605, -0.0056702704, -0.009791048, -0.008090272, -0.0026262435, 0.012989021, -0.00809165, -0.0045306403, 0.012469732, -0.008070979, -0.005982656, 0.0119801825, -0.008939156, -0.005917865, 0.011314488)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ggnfv"]
data = PackedVector3Array(-0.5970154, -1.0083618, -0.6611328, -0.5970154, -1.0083618, 0.609375, -0.561587, -1.0083618, 0.55823207, -0.5970154, -1.0083618, -0.6611328, -0.33271787, -1.0083618, 0.609375, -0.33271787, -1.0083618, 0.095459014, -0.5970154, -1.0083618, -0.6611328, -0.561587, -1.0083618, 0.55823207, -0.3443367, -1.0083618, 0.5826006, -0.5970154, -1.0083618, -0.6611328, -0.3443367, -1.0083618, 0.5826006, -0.33271787, -1.0083618, 0.609375, -0.5970154, -1.0083618, -0.6611328, -0.5970154, 1.3123779, -0.6611328, -0.5970154, -1.0083618, 0.609375, -0.5970154, -1.0083618, -0.6611328, -0.33271787, -1.0083618, 0.095459014, 0.591568, -1.0083618, -0.6611328, -0.5970154, -1.0083618, -0.6611328, 0.591568, -1.0083618, -0.6611328, -0.5970154, 1.3123779, -0.6611328, -0.5970154, -1.0083618, 0.609375, -0.56732357, -1.0083618, 0.609375, -0.561587, -1.0083618, 0.55823207, -0.5970154, -1.0083618, 0.609375, -0.5970154, 1.3123779, 0.609375, -0.56732357, -1.0083618, 0.609375, -0.33271787, -1.0083618, 0.609375, -0.3443367, -1.0083618, 0.5826006, -0.34733993, -1.0083618, 0.609375, -0.33271787, -1.0083618, 0.609375, -0.34733993, -1.0083618, 0.609375, -0.34733993, 1.3123698, 0.609375, -0.5970154, -1.0083618, 0.609375, -0.5970154, 1.3123779, -0.6611328, -0.5970154, 1.3123779, 0.609375, -0.5970154, 1.3123779, -0.6611328, 0.591568, 1.3123779, 0.609375, -0.5970154, 1.3123779, 0.609375, -0.5970154, 1.3123779, 0.609375, -0.56732357, 1.3123698, 0.609375, -0.56732357, -1.0083618, 0.609375, -0.5970154, 1.3123779, 0.609375, -0.34733993, 1.3123698, 0.609375, -0.56732357, 1.3123698, 0.609375, -0.33271787, -1.0083618, 0.609375, -0.34733993, 1.3123698, 0.609375, -0.33271787, 1.2081604, 0.609375, -0.5970154, 1.3123779, 0.609375, 0.591568, 1.3123779, 0.609375, -0.34733993, 1.3123698, 0.609375, -0.33271787, -1.0083618, 0.095459014, 0.41421512, -1.0083618, 0.095459014, 0.591568, -1.0083618, -0.6611328, 0.591568, -1.0083618, -0.6611328, 0.41421512, -1.0083618, 0.095459014, 0.591568, -1.0083618, 0.609375, 0.591568, -1.0083618, -0.6611328, 0.591568, -1.0083618, 0.609375, 0.591568, 1.3123779, 0.609375, 0.41421512, -1.0083618, 0.095459014, 0.41421512, -1.0083618, 0.609375, 0.591568, -1.0083618, 0.609375, 0.41421512, -1.0083618, 0.609375, 0.591568, 1.3123779, 0.609375, 0.591568, -1.0083618, 0.609375, -0.5970154, 1.3123779, -0.6611328, 0.591568, -1.0083618, -0.6611328, 0.591568, 1.3123779, -0.6611328, -0.5970154, 1.3123779, -0.6611328, 0.591568, 1.3123779, -0.6611328, 0.591568, 1.3123779, 0.609375, 0.591568, -1.0083618, -0.6611328, 0.591568, 1.3123779, 0.609375, 0.591568, 1.3123779, -0.6611328, -0.33271787, 1.2081604, 0.609375, -0.34733993, 1.3123698, 0.609375, 0.591568, 1.3123779, 0.609375, -0.33271787, 1.2081604, 0.609375, 0.591568, 1.3123779, 0.609375, 0.41421512, 1.2081604, 0.609375, 0.41421512, -1.0083618, 0.609375, 0.41421512, 1.2081604, 0.609375, 0.591568, 1.3123779, 0.609375, -0.33271787, -1.0083618, 0.095459014, -0.33271787, -1.0083618, 0.609375, -0.33271787, 1.2081604, 0.095459014, -0.33271787, -1.0083618, 0.095459014, -0.33271787, 1.2081604, 0.095459014, 0.41421512, -1.0083618, 0.095459014, -0.33271787, -1.0083618, 0.609375, -0.33271787, 1.2081604, 0.609375, -0.33271787, 1.2081604, 0.095459014, -0.33271787, 1.2081604, 0.095459014, -0.33271787, 1.2081604, 0.609375, 0.41421512, 1.2081604, 0.609375, 0.41421512, -1.0083618, 0.095459014, 0.41421512, 1.2081604, 0.609375, 0.41421512, -1.0083618, 0.609375, -0.33271787, 1.2081604, 0.095459014, 0.41421512, 1.2081604, 0.095459014, 0.41421512, -1.0083618, 0.095459014, -0.33271787, 1.2081604, 0.095459014, 0.41421512, 1.2081604, 0.609375, 0.41421512, 1.2081604, 0.095459014, 0.41421512, -1.0083618, 0.095459014, 0.41421512, 1.2081604, 0.095459014, 0.41421512, 1.2081604, 0.609375, -0.561587, -1.0083699, 0.55823207, -0.561587, -1.0083618, 0.55823207, -0.56732357, -1.0083618, 0.609375, -0.561587, -1.0083699, 0.55823207, -0.56732357, -1.0083618, 0.609375, -0.66402084, -1.0083699, 1.4714506, -0.561587, -1.0083699, 0.55823207, -0.66402084, -1.0083699, 1.4714506, -0.3443367, -1.0083699, 0.5826006, -0.561587, -1.0083699, 0.55823207, -0.3443367, -1.0083618, 0.5826006, -0.561587, -1.0083618, 0.55823207, -0.561587, -1.0083699, 0.55823207, -0.3443367, -1.0083699, 0.5826006, -0.3443367, -1.0083618, 0.5826006, -0.3443367, -1.0083699, 0.5826006, -0.44677055, -1.0083699, 1.4958191, -0.34733993, -1.0083618, 0.609375, -0.66402084, -1.0083699, 1.4714506, -0.44677055, -1.0083699, 1.4958191, -0.3443367, -1.0083699, 0.5826006, -0.44677055, -1.0083699, 1.4958191, -0.34733993, 1.3123698, 0.609375, -0.34733993, -1.0083618, 0.609375, -0.66402084, -1.0083699, 1.4714506, -0.56732357, -1.0083618, 0.609375, -0.66402084, 1.3123698, 1.4714506, -0.66402084, -1.0083699, 1.4714506, -0.44677055, 1.3123698, 1.4958191, -0.44677055, -1.0083699, 1.4958191, -0.3443367, -1.0083699, 0.5826006, -0.34733993, -1.0083618, 0.609375, -0.3443367, -1.0083618, 0.5826006, -0.66402084, 1.3123698, 1.4714506, -0.56732357, -1.0083618, 0.609375, -0.56732357, 1.3123698, 0.609375, -0.66402084, -1.0083699, 1.4714506, -0.66402084, 1.3123698, 1.4714506, -0.44677055, 1.3123698, 1.4958191, -0.44677055, -1.0083699, 1.4958191, -0.44677055, 1.3123698, 1.4958191, -0.34733993, 1.3123698, 0.609375, -0.44677055, 1.3123698, 1.4958191, -0.56732357, 1.3123698, 0.609375, -0.34733993, 1.3123698, 0.609375, -0.66402084, 1.3123698, 1.4714506, -0.56732357, 1.3123698, 0.609375, -0.44677055, 1.3123698, 1.4958191)

[sub_resource type="BoxShape3D" id="BoxShape3D_18276"]
size = Vector3(0.7835388, 1, 0.39953613)

[sub_resource type="BoxShape3D" id="BoxShape3D_ggnfv"]
size = Vector3(4.7, 0.15, 1.07)

[node name="ToiletGoal" type="Node3D"]
transform = Transform3D(0.8660254, 0, 0.5, 0, 1, 0, -0.5, 0, 0.8660254, 0, 0, 0)
script = ExtResource("1_e6fg2")

[node name="LockedToilet" type="StaticBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, 0, 1.0428514, 0)
visible = false

[node name="Toilet A" parent="LockedToilet" instance=ExtResource("4_kyw5l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.069, -0.15, 0.218)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LockedToilet"]
transform = Transform3D(99.99999, 0, 0, 0, -1.1920929e-05, 99.99999, 0, -99.999985, -1.1920928e-05, 0.06899999, -0.14999998, 0.21799998)
shape = SubResource("ConvexPolygonShape3D_18276")

[node name="OpenToilet" type="StaticBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, 0, 1.0428514, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="OpenToilet"]
transform = Transform3D(-4.371138e-08, 0, 0.9999999, 0, 1, 0, -0.9999999, 0, -4.371138e-08, -0.14362572, -0.124938965, 0.27297375)
shape = SubResource("ConcavePolygonShape3D_ggnfv")

[node name="Toilet B" parent="OpenToilet" instance=ExtResource("5_bj8tn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.069, -0.15, 0.218)

[node name="GoalArea" type="Area3D" parent="OpenToilet"]
unique_name_in_owner = true
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, 0.95458984, 0, 0)

[node name="GoalAreaShape" type="CollisionShape3D" parent="OpenToilet/GoalArea"]
transform = Transform3D(0.9999997, 0, 0, 0, 1, 0, 0, 0, 0.9999997, 0.032793343, 0.1763916, 0.28240576)
shape = SubResource("BoxShape3D_18276")

[node name="PalletBridge" type="StaticBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.9999997, 0, 0, 0, 1, 0, 0, 0, 0.9999997, 0, 0, 0.2774048)
visible = false

[node name="Pallet" parent="PalletBridge" instance=ExtResource("4_18276")]
transform = Transform3D(1.0000001, 0, 0, 0, 1, 0, 0, 0, 1.0000001, 1, 0, 0)

[node name="Pallet2" parent="PalletBridge" instance=ExtResource("4_18276")]
transform = Transform3D(1.0000001, 0, 0, 0, 1, 0, 0, 0, 1.0000001, 2.1, 0, 0)

[node name="Pallet3" parent="PalletBridge" instance=ExtResource("4_18276")]
transform = Transform3D(1.0000001, 0, 0, 0, 1, 0, 0, 0, 1.0000001, 3.2, 0, 0)

[node name="Pallet4" parent="PalletBridge" instance=ExtResource("4_18276")]
transform = Transform3D(1.0000001, 0, 0, 0, 1, 0, 0, 0, 1.0000001, 4.3, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PalletBridge"]
transform = Transform3D(1.0000002, 0, 0, 0, 1, 0, 0, 0, 1.0000002, 2.5000005, -0.01, 0.002595216)
shape = SubResource("BoxShape3D_ggnfv")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
transform = Transform3D(-4.371138e-08, 0, 0.9999999, 0, 1, 0, -0.9999999, 0, -4.371138e-08, -0.14362572, 0.9179125, 0.27297375)
visible = false

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0027236845, 0.15200806, -0.025878917)
size = Vector3(1.1885834, 2.3207397, 1.2705078)

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.040748626, 0.09989929, 0.35241702)
operation = 2
size = Vector3(0.746933, 2.2165222, 0.513916)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.99376804, 0, -0.11146897, 0, 1, 0, 0.11146897, 0, 0.99376804, -0.50417876, 0.15199995, 1.0270256)
size = Vector3(0.21861267, 2.3207397, 0.9189453)
